content/docs/0.2.5/1.getting-started/8.middleware.md
---
title: Middleware
navTitle: Middleware
description: The chain that is already installed, the two you can add, how to instrument a service without a tracing dependency, how to write your own, and the one thing that fails quietly in Go.
---

# Middleware

Middleware in Muzak is an ordinary `func(http.Handler) http.Handler`, so anything written
for the standard library works unchanged.

```go
type Middleware func(next http.Handler) http.Handler
```

It operates below the typed layer, on the raw `net/http` types. Everything typed happens
inside `dispatch`, at the end of the chain.

## What is already installed

Four pieces of middleware are installed for you, in this order, outermost first.

| Middleware | What it does | Turn it off with |
|---|---|---|
| `RequestID` | Assigns an identifier, records it in the request context, echoes it in `X-Request-Id` | Not disableable |
| `SecurityHeaders` | Sets `X-Content-Type-Options`, `X-Frame-Options` and a referrer policy, never overwriting a value already set | `DisableSecurityHeaders` |
| `Recovery` | Catches a panic, logs it with its stack, answers a generic 500 | Not disableable |
| `AccessLog` | One line per request with method, path, status, duration, bytes and identifier | `DisableAccessLog` |
| `Locale` | Resolves the request's locale, records it in the request context, echoes it in `Content-Language` | Installed only when `I18n` names a store |

Anything you add with `App.Use` runs inside that chain, so it already has an identifier
available and is already covered by panic recovery. CORS, when configured, runs after
your middleware and before the documentation routes and the router.

```
RequestID → SecurityHeaders → Recovery → Locale → AccessLog → your middleware → CORS → /docs and /openapi.json → routes
```

`Locale` sits where it does for two reasons, and it is only there at all when
[internationalization](/docs/fundamentals/internationalization) is configured. It is inside
`Recovery` because a custom extractor is your code and can panic. It is outside `AccessLog`
because middleware further out holds the request as it arrived, so the log can only record
a locale that was resolved before it ran.

`Use` installs in order, so the first one installed is the outermost. Calls made after the
application has been built have no effect, because the chain is assembled once.

## Compression

```go
app.Use(muzak.Compress(muzak.CompressionOptions{}))
```

One line. It negotiates gzip or deflate from `Accept-Encoding`, records `Vary` on every
response either way, and declines what compressing would not help. See
[Compression](/docs/techniques/compression) for the options and the security
note that goes with it.

## CORS

CORS is configured rather than installed, and the zero value denies everything.

```go
app := muzak.New(muzak.AppOptions{
    Title: "Awesome API",
    CORS: muzak.CORSOptions{
        AllowedOrigins:   []string{"https://app.example.com"},
        AllowCredentials: true,
        MaxAge:           10 * time.Minute,
    },
})
```

No CORS header is emitted until a policy names an origin or supplies an
`AllowOriginFunc`, and a wildcard origin combined with credentials is refused as a build
error rather than served. See [CORS](/docs/security/cors).

## Instrumenting a service

Middleware is the seam for tracing and metrics, and it runs below the typed layer, before
routing. So the one thing an instrument needs -- which route matched -- is not something it
can see for itself. `RouteFromContext` publishes it.

```go
func Tracing(next http.Handler) http.Handler {
    return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
        start := time.Now()
        next.ServeHTTP(w, r)

        route, ok := muzak.RouteFromContext(r.Context())
        if !ok {
            route = "unmatched"     // a 404 is a 404, not traffic to a route named ""
        }
        status := 0
        if recorder, ok := w.(muzak.StatusRecorder); ok {
            status = recorder.Status()
        }
        record(route, status, time.Since(start))
    })
}
```

**Use the template, never the path.** `r.URL.Path` is the concrete request:

```
/orgs/01a06391-0a5b-7695-af40-babc7981a63e/apps/01a063ad-d99f-7a05-98b6-d12f11b24ea3/keys
```

As a span name or a metric label that is one time series per organization per app. Unbounded
cardinality is how a tracing backend falls over, and it makes the only question worth asking
-- how slow is this endpoint -- unanswerable, because every request is its own endpoint. The
template is bounded by the number of routes you wrote:

```
/orgs/{org_id}/apps/{app_id}/keys
```

Two rules about when to read it. **After `next.ServeHTTP` returns**, because before that
routing has not happened. And a request that matched nothing reports `false` rather than an
empty string, so a miss is counted as a miss.

`StatusRecorder` is the response writer the access log installs. The assertion can fail --
`DisableAccessLog` means there is no wrapper -- so middleware that needs the status either
way should fall back to wrapping the writer itself.

The framework carries no tracing library and no dependency for one. It has none at all, and
an OpenTelemetry API is ten modules before an SDK or an exporter is chosen. What it owes an
instrument is the fact it alone knows, which is the route; everything else belongs in the
application or beside the framework.

## The access log

```go
app := muzak.New(muzak.AppOptions{
    Title: "Awesome API",
    AccessLogOptions: muzak.AccessLogOptions{
        Level:     slog.LevelInfo,
        SkipPaths: []string{"/healthz"},
    },
})
```

```
14:32:10.114 INFO  [Request]       GET /items/  status=200  route=/items/  duration=412µs  bytes=181  request_id=0611f4b2
```

Successful responses are logged at `Level`. Server errors are always logged at error level
and client errors at warn level, so a quiet production level still surfaces failures.
`SkipPaths` lists exact paths that produce no line, which keeps a health check polled
every second from drowning out real traffic.

`route` is the template the request matched, beside the concrete path in the message. The
path is what somebody reading a log wants; the template is what a query groups by, and what
joins a log line to the trace and the metric for the same endpoint.

Only fixed, non-sensitive fields are recorded. Query strings, request bodies and headers
are deliberately omitted, because each of them routinely carries credentials or personal
data that should not be duplicated into a log store.

## Request identifiers

```go
app := muzak.New(muzak.AppOptions{
    Title:                "Awesome API",
    TrustRequestIDHeader: true,
})
```

By default an inbound `X-Request-Id` is ignored and a fresh UUID version 7 is generated,
because an attacker-controlled identifier is an attacker-controlled log field. With the
option on, an inbound value is honoured only if it parses as a UUID, so it can never carry
newlines or control characters into a log line.

Inside a handler the identifier is `ctx.RequestID()`. In code that has only a
`context.Context`, such as a repository or a client wrapper, it is
`muzak.RequestIDFromContext(ctx)`.

## Writing your own

::code-group

```go [core/middleware.go]
// ProcessTime reports how long the service spent on a request in an
// X-Process-Time header, in seconds.
func ProcessTime() muzak.Middleware {
    return func(next http.Handler) http.Handler {
        return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
            next.ServeHTTP(&processTimer{ResponseWriter: w, start: time.Now()}, r)
        })
    }
}

// processTimer stamps the elapsed time onto the response as it starts.
type processTimer struct {
    http.ResponseWriter
    start   time.Time
    stamped bool
}

// WriteHeader records the duration and forwards the status.
func (w *processTimer) WriteHeader(status int) {
    if !w.stamped {
        w.stamped = true
        elapsed := time.Since(w.start).Seconds()
        w.Header().Set("X-Process-Time", strconv.FormatFloat(elapsed, 'f', 6, 64))
    }
    w.ResponseWriter.WriteHeader(status)
}

// Write stamps a response whose handler never set a status, which net/http
// treats as a 200.
func (w *processTimer) Write(b []byte) (int, error) {
    if !w.stamped {
        w.WriteHeader(http.StatusOK)
    }
    return w.ResponseWriter.Write(b)
}

// Flush passes a flush through to whatever is underneath, so that installing
// this middleware cannot stop a handler from streaming.
func (w *processTimer) Flush() {
    if flusher, ok := w.ResponseWriter.(http.Flusher); ok {
        flusher.Flush()
    }
}

// Unwrap exposes the underlying writer to http.ResponseController.
func (w *processTimer) Unwrap() http.ResponseWriter { return w.ResponseWriter }
```

```go [cmd/main.go]
app.Use(core.ProcessTime())
app.Use(muzak.Compress(muzak.CompressionOptions{}))
```

::

### The one thing that fails quietly

The obvious shape for that middleware does not work, and it fails without a word:

```go
start := time.Now()
next.ServeHTTP(w, r)
w.Header().Set("X-Process-Time", elapsed(start)) // too late
```

That reads correctly and does nothing. Go puts the header block on the wire at the first
`WriteHeader`, which the handler has already called by the time control comes back, so the
value is written to a map nobody will read again and no error is reported. Middleware that reports something only known
at the end has to wrap the writer and fill the value in as the response starts, which is
what `processTimer` above does.

Two details make a wrapper well behaved:

- Implement `Write` as well as `WriteHeader`, because a handler that writes a body without
  setting a status never calls `WriteHeader` itself.
- Implement `Unwrap() http.ResponseWriter`, so `http.ResponseController` can still reach
  the real writer. Without it, a wrapper breaks flushing, hijacking and the deadline
  handling that WebSockets and event streams depend on.

## Middleware and the typed layer

Middleware runs before routing, so it cannot see the matched route, the bound input or the
resolved dependencies. Anything that needs those belongs in a guard or a provider, which
run per route and can refuse the request with a typed error. See
[Dependencies](/docs/getting-started/dependencies).

## Where to go next

[Lifecycle](/docs/getting-started/lifecycle) covers the resources a request
depends on, and [Compression](/docs/techniques/compression) covers the one piece
of middleware most applications add.
